<resources>
    <string name="app_name">IICParking</string>
    <string name="inti">INTI</string>
    <string name="internation">International\nUniversity College</string>
    <string name="registerTitle">Registration</string>
    <string name="idInputPrompt">Enter Student ID</string>
    <string name="passwordInputPrompt">Enter Password</string>
    <string name="emailInputPrompt">Enter Email</string>
    <string name="nameInputPrompt">Enter Name</string>
    <string name="phoneInputPrompt">Enter Phone Number</string>
    <string name="confirmPasswordPrompt">Enter Confirm Password</string>
    <string name="name">Name</string>
    <string name="matriculationNo">Matriculation No</string>
    <string name="email">Email</string>
    <string name="phoneNo">PhoneNo</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="registerButton">Register</string>
    <string name="cancel">Cancel</string>
    <string name="Welcome">WELCOME</string>
    <string name="forgetPassword">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="noAccount">Do not have a Account ?</string>
    <string name="signup">Sign Up !</string>
    <string name="profileTitle">Profile</string>
    <string name="profileName">Bong Kai Min</string>
    <string name="profileMatrix">P21013393</string>
    <string name="profileEmail">p21013393@student.newinti.edu.my</string>
    <string name="profilePhone">012-xxxxxxx</string>
    <string name="profilePassword">01234567890</string>
    <string name="editProfileButton">Edit Profile</string>
    <string name="reportTitle">Report Issue</string>
    <string name="issueTitle">Issue Title:</string>
    <string name="issueDescription">Issue Description:</string>
    <string name="submitButton">Submit</string>
    <string name="discardButton">Discard</string>
    <string name="popUpTitle">Current Time Slot</string>
    <string name="startTime">1200</string>
    <string name="endTime">1400</string>
    <string name="hourValue">01</string>
    <string name="minuteValue">00</string>
    <string name="hourH">H</string>
    <string name="minuteM">MIN</string>
    <string name="location">Basement</string>
    <string name="popUpLeftButton">Cancel</string>
    <string name="popUpRightButton">Submit</string>
    <string name="searchVehicleTitle">Search User\'s Vehicle</string>
    <string name="searchBar">PXX 1234</string>
    <string name="searchButton">Search</string>
    <string name="alertTitle">Double Park Alert</string>
    <string name="carPlate">ABC 4567</string>
    <string name="idTitle">Matriculation No:</string>
    <string name="blockCarPlate">Block Car Plate:</string>
    <string name="blockCarPlateValue">ABC 1234</string>
    <string name="idValue">P21013393</string>
    <string name="phoneTitle">Phone:</string>
    <string name="phoneValue">016-XXXXXXX</string>
    <string name="timeTitle">Time:</string>
    <string name="timeSlotStartTime">1300</string>
    <string name="locationTitle">Location:</string>
    <string name="locationValue">Basement</string>
    <string name="alertLeftButton">Notify User</string>
    <string name="alertRightButton">Contact User</string>
    <string name="parkManage">Parking Management</string>
    <string name="manageCar">Manage Vehicle</string>
    <string name="f1">FLOOR 1</string>
    <string name="basement1">BASEMENT -1</string>
    <string name="basement2">BASEMENT -2</string>
    <string name="garden">GARDEN</string>
    <string name="parkVacancy">Park Vacancy</string>
    <string name="parkSelect">Parking Selection</string>
    <string name="searchCar">Search Vehicle</string>
    <string name="report">Report</string>
    <string name="profile">Profile</string>
    <string name="peak">Peak Time</string>
    <string name="notif">Notification</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="parkingType">Parking Type :</string>
    <string name="location2">Location :</string>
    <string name="timeSlot">Time Slot :</string>
    <string name="blockCar">Blocked Car :</string>
    <string name="addBlocked">Add New Blocked Car +</string>
    <string name="returnButton">Return</string>
    <string name="comfirmButton">Confirm</string>
    <string name="select_location">Choose Your Location</string>
    <string name="slotSelect">Slot Selection</string>
    <string name="yourVehicle">Your Vehicle</string>
    <string name="addNew_vehicle"> + Add New Vehicle</string>
    <string name="currentCarPlate"> Double Parker Details:</string>
    <string name="carColor"> Current Car Color :</string>
    <string name="cPlate"> Car Plate :</string>
    <string name="cColor"> Car Color :</string>
    <string name="addVehicle">Add Vehicle</string>

    <string name="pmCarPlate">ABC 1234</string>
    <string name="pmStartTime">1200</string>
    <string name="pmEndTime">1400</string>
    <string name="pmLocationValue">Basement</string>
    <string name="pmLeftButton">Add Time</string>
    <string name="pmRightButton">Exit Parking</string>
    <string name="notificationPopUpTitle">Parking Reminder Alert</string>
    <string name="notificationDescription">Your parked vehicle needs to be relocated. Please move it to avoid any issues. Thanks for your cooperation!</string>
    <string name="edit_name">Name</string>
    <string name="edit_email">Email</string>
    <string name="edit_phone">Phone No</string>
    <string name="edit_password">Password</string>
    <string name="edit_comfirmPassword">Confirm Password</string>

    <string name="forgetPass">Forget Password</string>
    <string name="newPass">New Password</string>
    <string name="promptNewPass">Enter New Password</string>
    <string name="promptConfirmPass">Confirm New Password</string>
    <string name="promptEmail">Enter Your Email Address</string>
    <string name="cont">Continue</string>
    <string name="backToLogin">Return Back To Login</string>
    <string name="confirm">Confirm</string>
    <string name="logout">Logout</string>
    <string name="exit_application">Exit Application</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="none">NONE</string>
    <string name="car_plate_number">Car Plate Number</string>
    <string name="car_color">Car Color</string>
    <string name="empty_time">--:--</string>
    <string name="car_plate_1">Car Plate 1</string>
    <string name="extend_time">Extend Time</string>
    <string name="finish_parking">Finish Parking</string>
    <string name="not_parked">Not Parked</string>
    <string name="close">Close</string>
    <string name="in_parking">In Parking</string>
    <string name="extend_time_slot">Extend Time Slot</string>
    <string name="no_car_selected">No Car Selected</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>


    <string-array name="location">
        <item>Floor 1</item>
        <item>Basement -1</item>
        <item>Basement -2</item>
        <item>Garden</item>
    </string-array>
    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="title_issue">
        <item>Parking Issue</item>
        <item>Security Issue</item>
        <item>Facility Maintenance</item>
        <item>Others</item>
    </string-array>


</resources>