<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTime_PopUp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/rectangle1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popUpTitle"
            android:textColor="@color/INTIRed"
            android:textSize="35dp"
            android:id="@+id/title"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startTime"
                android:textSize="25dp"
                android:fontFamily="@font/inter_bold"
                android:layout_marginEnd="15dp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/profile_back_red"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endTime"
                android:textSize="25dp"
                android:fontFamily="@font/inter_bold"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hourValue"
                android:background="@drawable/input_background"
                android:textSize="25dp"
                android:paddingLeft="3dp"
                android:paddingRight="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hourH"
                android:textSize="25dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/inter_bold"
                android:paddingBottom="1dp"/>

            <EditText
                android:id="@+id/min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/minuteValue"
                android:background="@drawable/input_background"
                android:textSize="25dp"
                android:paddingLeft="3dp"
                android:paddingRight="5dp"
                android:layout_marginStart="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minuteM"
                android:textSize="25dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/inter_bold"
                android:paddingBottom="1dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="25dp"
                android:background="@drawable/input_background2"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popUpLeftButton"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>