<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:minWidth="300dp"
    android:backgroundTint="@color/white"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:paddingHorizontal="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alertTitle"
                android:textSize="30dp"
                android:textColor="@color/INTIRed"
                android:fontFamily="@font/inter_bold"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/warning"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/red_border"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentCarPlate"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_bold"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idTitle"
                    android:textSize="20dp"
                    android:fontFamily="@font/inter_bold"/>

                <TextView
                    android:id="@+id/alert_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idValue"
                    android:textSize="20dp"
                    android:textColor="@color/INTIRed"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blockCarPlate"
                    android:textSize="20dp"
                    android:fontFamily="@font/inter_bold"/>

                <TextView
                    android:id="@+id/alert_blockCarPlate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blockCarPlateValue"
                    android:textSize="20dp"
                    android:textColor="@color/INTIRed"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phoneTitle"
                    android:textSize="20dp"
                    android:fontFamily="@font/inter_bold"/>

                <TextView
                    android:id="@+id/alert_phoneNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phoneValue"
                    android:textSize="20dp"
                    android:textColor="@color/INTIRed"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeTitle"
                    android:textSize="20dp"
                    android:fontFamily="@font/inter_bold"/>

                <TextView
                    android:id="@+id/alert_Time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/timeSlotStartTime"
                    android:textSize="20dp"
                    android:textColor="@color/INTIRed"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/alert_notifyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alertLeftButton"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_bold"
                android:background="@drawable/primary_button_background"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"/>


        </LinearLayout>





    </LinearLayout>




</com.google.android.material.card.MaterialCardView>