<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage"
    android:background="@color/white">

    <include
        layout="@layout/app_header"
        android:id="@+id/header"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/Welcome"
        android:textColor="@color/INTIRed"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/welcome"
        android:layout_marginTop="20dp"
        />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@mipmap/ipark_logo_foreground"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        android:id="@+id/logo"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:background="@drawable/input_background2"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/email"
        android:paddingHorizontal="10sp"
        android:paddingVertical="5sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:background="@drawable/input_background2"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/password"
        android:paddingHorizontal="10sp"
        android:paddingVertical="5sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:layout_constraintWidth_percent="0.8" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetPassword"
        android:fontFamily="@font/inter_semibold"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        app:layout_constraintEnd_toEndOf="@id/passwordInput"
        android:textColor="@color/INTIRed"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/underline_clicked"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/primary_button_background"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/buttonTextWhite"
        android:text="@string/login"
        android:paddingHorizontal="50dp"
        android:id="@+id/loginButton"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noAccount"
            android:id="@+id/signupPrompt"


            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:fontFamily="@font/inter_semibold"
            android:textSize="15sp"
            android:textColor="@color/INTIRed"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/underline_clicked"
            android:id="@+id/signupButton"
            android:layout_marginStart="5dp"

            />



    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>