<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PeakTimePage">

    <include layout="@layout/app_header"
        android:id="@+id/appHeader"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/secondaryDay"
        android:text="@string/sunday"
        app:layout_constraintEnd_toStartOf="@id/primaryDay"
        app:layout_constraintTop_toBottomOf="@id/primaryDay"
        android:layout_marginTop="-32dp"
        android:layout_marginEnd="-28dp"
        android:id="@+id/priorDay"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/secondaryDay"
        android:text="@string/tuesday"
        app:layout_constraintStart_toEndOf="@id/primaryDay"
        app:layout_constraintTop_toBottomOf="@id/primaryDay"
        android:layout_marginTop="-32dp"
        android:layout_marginStart="-28dp"
        android:id="@+id/afterDay"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/primaryDay"
        android:text="@string/monday"
        app:layout_constraintTop_toBottomOf="@id/appHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:id="@+id/primaryDay"
        />






</androidx.constraintlayout.widget.ConstraintLayout>