<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/white"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:minWidth="400dp"
        >

        <TextView
            android:id="@+id/carPlateNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pmCarPlate"
            android:background="@drawable/plate_background"
            style="@style/carPlateText"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/profile_back_red"
            app:layout_constraintTop_toBottomOf="@id/carPlateNo"
            app:layout_constraintStart_toStartOf="@id/carPlateNo"
            app:layout_constraintEnd_toEndOf="@id/carPlateNo"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pmStartTime"
            android:textSize="25dp"
            android:fontFamily="@font/inter_bold"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toStartOf="@id/arrow"
            app:layout_constraintTop_toTopOf="@id/arrow"
            app:layout_constraintBottom_toBottomOf="@id/arrow"
            />



        <TextView
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pmEndTime"
            android:textSize="25dp"
            android:fontFamily="@font/inter_bold"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@id/arrow"
            app:layout_constraintTop_toTopOf="@id/arrow"
            app:layout_constraintBottom_toBottomOf="@id/arrow"
            />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pmLocationValue"
            android:textSize="20dp"
            android:fontFamily="@font/inter_bold"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addTimeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/extend_time"
            android:textColor="@color/white"
            android:backgroundTint="@color/INTIRed"
            style="@style/Widget.MaterialComponents.Button"
            app:layout_constraintTop_toBottomOf="@id/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/finishParkingButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintHeight_min="54dp"



            app:layout_constraintHorizontal_weight="1"


            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finishParkingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/finish_parking"
            android:textColor="@color/white"
            android:backgroundTint="@color/INTIRed"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:layout_constraintTop_toBottomOf="@id/location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/addTimeButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_weight="1"
            app:strokeColor="@color/INTIRed"
            app:layout_constraintHeight_min="54dp"



            />




    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
